--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 569px) {
   .footer__copyright {
+    font-size: 14px;
     margin-top: 48px;
   }
 }
