--- a/blocks/logo.css
+++ b/blocks/logo.css
@@ -8,6 +8,8 @@
 @media screen and (max-width: 569px) {
     .logo{
       margin-left: 27px;
+      width: 126px;
+      height: 24px;
     }
   }
   
