--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -36,6 +36,7 @@
   background-color: transparent;
   box-sizing: border-box;
   border: 1px solid #ffffff;
+  cursor: pointer;
 }
 .profile__name-edit:hover {
   opacity: 0.6;
@@ -68,13 +69,12 @@
   margin-left: auto;
   box-sizing: border-box;
   padding: 0;
-  width: 150px;
+  min-width: 150px;
   height: 50px;
   border: 2px solid #fff;
   border-radius: 2px;
   background-color: transparent;
-  color: #fff;
-
+  cursor: pointer;
 }
 .profile__add-button:hover {
   opacity: 0.6;
@@ -119,6 +119,16 @@
   .profile__name {
     font-size: 22px;
   }
+
+  .profile__name-edit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 18px;
+    height: 18px;
+
+  }
+
   .profile__pencil {
     width: 7.5px;
     height: 7.5px;
@@ -131,5 +141,10 @@
   .profile__add-button {
     width: 100%;
     min-height: 50px;
+  }
+
+  .profile__add-icon {
+    width: 16px;
+    height: 16px;
   }
 }
